# the-hive-mcp-server

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md  __init__.md  __main__.md  envs.md  handlers.md  handlers___init__.md  handlers_alert.md  handlers_case.md  handlers_comment.md  handlers_cortex.md  handlers_observable.md  handlers_procedure.md  handlers_task.md  handlers_timeline.md  handlers_user.md  main.md  server.md  src.md  src_envs.md  src_main.md  src_thehive_case.md  src_thehive_case_template.md  src_thehive_comment.md  src_thehive_observable.md  src_thehive_query.md  src_thehive_task.md  thehive_alert.md  thehive_api_client.md  thehive_case.md  thehive_case_template.md  thehive_comment.md  thehive_observable.md  thehive_query.md  thehive_task.md
docs/markdown/: README.md
tests/: __init__.py  conftest.py
tests/integration/: test_integration.py
tests/unit/: test_alert.py  test_case.py  test_cortex.py  test_observable.py  test_task.py
thehive_mcp/: __main__.py  app.py  envs.py  logger.py  main.py  tool_wrapper.py
thehive_mcp/clients/: __init__.py  cortex.py  thehive.py
thehive_mcp/tools/: __init__.py  alert.py  case.py  cortex.py  observable.py  task.py
